--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/expansion-panel/expansion-panel.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/expansion-panel/expansion-panel.component.html
@@ -9,8 +9,8 @@
 <mat-accordion>
   <mat-expansion-panel class="expansion-style">
     <mat-expansion-panel-header class="expansion-style--header">
-      <mat-panel-title class="expansion-style--title"
-        [ngClass]="{'sin-diligenciar':true,'en-proceso':false,'completo':false}">
+      <mat-panel-title class="expansion-style--title
+        {{ validarRegistroCompletoBasico() === null ? 'sin-diligenciar' : (validarRegistroCompletoBasico() === false ? 'en-proceso' : 'completo' ) }} ">
         Registrar novedad
       </mat-panel-title>
     </mat-expansion-panel-header>
@@ -24,8 +24,8 @@
   </mat-expansion-panel>
   <mat-expansion-panel class="expansion-style">
     <mat-expansion-panel-header class="expansion-style--header">
-      <mat-panel-title class="expansion-style--title "
-        [ngClass]="{'sin-diligenciar':true,'en-proceso':false,'completo':false, 'en-alerta':false}">
+      <mat-panel-title class="expansion-style--title {{ novedad.registroCompletoSoporte == false ? 'sin-diligenciar' : 'completo' }}"
+        >
         Soporte de la solicitud
       </mat-panel-title>
     </mat-expansion-panel-header>
