--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
@@ -5,8 +5,10 @@
         <img src="assets/img/icon/regresar.svg" alt="Regresar">
       </a>
     </div>
-    <h1 class="title-menu--h1">
-      Registrar solicitud de novedad contractual
+    <h1 class="title-menu--h1" *ngIf="novedad">
+      
+      {{ novedad.novedadContractualId === undefined ? 'Registrar' : 'Ver detalle/Editar registro' }}
+       solicitud de novedad contractual {{ novedad.novedadContractualId === undefined ? '' : novedad.numeroSolicitud }}
     </h1>
   </div>
 
@@ -28,7 +30,7 @@
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
-          <img src="assets/img/icon/lupa.svg" alt="Buscar" class="buscar" (click)="buscar.focus()">
+          
         </div>
       </div>
     </div>
@@ -55,12 +57,14 @@
   <div class="pt-3em animatedDown" *ngIf="novedadAplicada.value === false && proyectos" >
     <app-tabla-proyectos-registrar-novedad
                                             [listaProyectos]="proyectos"
+                                            [proyectoId]="proyecto?.proyectoId"
                                             (Proyecto)="seleccionarProyecto($event)"
                                             >
   </app-tabla-proyectos-registrar-novedad>
   </div>
 
-  <mat-card class="shipping-card var-main-gris animatedDown" *ngIf="novedadAplicada.value !== undefined && contrato ">
+  <mat-card class="shipping-card var-main-gris animatedDown" 
+            *ngIf="novedadAplicada.value !== undefined && contrato ">
     <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text">
         Datos del contrato
@@ -95,15 +99,16 @@
       </p>
       <p>
         <strong>Plazo:</strong>
-        {{contrato?.plazoFase1PreMeses}} meses / {{contrato?.plazoFase1PreDias}} días
+        {{ contrato?.plazoFase1PreMeses + ( contrato?.plazoFase2ConstruccionMeses ? contrato?.plazoFase2ConstruccionMeses : 0 ) }} meses / 
+        {{ contrato?.plazoFase1PreDias + ( contrato?.plazoFase2ConstruccionDias ? contrato?.plazoFase2ConstruccionDias : 0 ) }} días 
       </p>
       <p>
         <strong>Fecha de inicio de contrato:</strong>
-        {{contrato?.fechaActaInicioFase1| date:'dd/MM/yyyy'}}
+        {{ (contrato?.fechaActaInicioFase2 ? contrato?.fechaActaInicioFase2 : contrato?.fechaActaInicioFase1) | date:'dd/MM/yyyy'}}
       </p>
       <p>
         <strong>Fecha de finalización de contrato:</strong>
-        {{contrato?.fechaTerminacion| date:'dd/MM/yyyy'}}
+        {{ (contrato?.fechaTerminacionFase2 ? contrato?.fechaTerminacionFase2 : contrato?.fechaTerminacion) | date:'dd/MM/yyyy'}}
       </p>
 
       <div class="animatedDown" *ngIf="novedadAplicada.value === false && proyecto">
