--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/form-gestionar-fuentes/form-gestionar-fuentes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/form-gestionar-fuentes/form-gestionar-fuentes.component.html
@@ -170,8 +170,9 @@
                           required
                           maxLength="20"
                           onKeyPress="if(this.value.length>=this.maxLength) return false;"
-                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
-                          [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'left' }"
+                          oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                          [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'left', allowNegative: false }"
+                          
                           formControlName="valorSolicitado"
                         />
                       </mat-form-field>
