--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/tabla-crear-solicitud-tradicional/tabla-crear-solicitud-tradicional.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/tabla-crear-solicitud-tradicional/tabla-crear-solicitud-tradicional.component.html
@@ -107,7 +107,8 @@
                          element.estadoSolicitudText === 'En validación presupuestal' ||  element.estadoSolicitudText === 'Con disponibilidad presupuestal'
                          ||  element.estadoSolicitudText === 'Rechazada por validación presupuestal' 
                          ||  element.estadoSolicitudText === 'Devuelta por coordinación financiera'
-                         ||  element.estadoSolicitudText === 'Con registro presupuestal')">
+                         ||  element.estadoSolicitudText === 'Con registro presupuestal'
+                         ||  element.estadoSolicitudText === 'Con disponibilidad cancelada')">
                         Ver detalle
                     </a>
     
