--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/control-tabla-proceso-defensa-judicial/control-tabla-proceso-defensa-judicial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/control-tabla-proceso-defensa-judicial/control-tabla-proceso-defensa-judicial.component.html
@@ -70,7 +70,8 @@
                 <button mat-raised-button color="accent" class="btn-table"
                     (click)="GetPlantillaDefensaJudicial(element.defensaJudicialId,1)"
                     *ngIf="(element.estadoProcesoCodigo === '2' && element.registroCompletoNombre=='Completo') || (element.estadoProcesoCodigo === '6' && element.registroCompletoNombre=='Completo')
-                    || (element.estadoProcesoCodigo === '3' && element.cuantiaPerjuicios==null && element.registroCompletoNombre=='Completo') || (element.estadoProcesoCodigo === '9' && element.esprocesoResultadoDefinitivo==false)">
+                    || (element.estadoProcesoCodigo === '3' && element.cuantiaPerjuicios==null && element.registroCompletoNombre=='Completo') || (element.estadoProcesoCodigo === '9' && element.esprocesoResultadoDefinitivo==false)
+                    || (element.estadoProcesoCodigo === '3' && element.cuantiaPerjuicios!=null && element.registroCompletoNombre=='Completo')">
                     Descargar ficha de estudio
                 </button>
                 <button mat-raised-button color="accent" class="btn-table"
