--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/detalle-informe-final-rlc/detalle-informe-final-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/detalle-informe-final-rlc/detalle-informe-final-rlc.component.html
@@ -1,6 +1,6 @@
-<section class="container text-center">
+<section class="container text-center" *ngIf="data !== undefined">
     <div class="text-right">
-        <a routerLink="/registrarLiquidacionContrato/gestionarSolicitud/1" mat-button color="primary"
+        <a (click)="getRutaAnterior()" mat-button color="primary"
             class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
@@ -10,37 +10,36 @@
         <span>Fecha de envío del informe final: <b>29/11/2020</b></span>
         <span>Fecha de aprobación del informe final: <b>29/11/2020</b></span>
     </p>
-    <mat-card class="shipping-card var-main-gris">
-        <mat-card-header class="header-card  header-card--margin">
-            <mat-card-title class="header-card--text">
-                Datos del proyecto
-            </mat-card-title>
+    <mat-card class="shipping-card border" align="left">
+        <mat-card-header class="header-card header-card--margin">
+          <mat-card-title class="header-card--text card-title-detalle">
+            Datos del proyecto
+          </mat-card-title>
         </mat-card-header>
-        <mat-card-content align="left">
-            <p><strong>Tipo de intervención: </strong><em>Remodelación</em></p>
-            <p><strong>Institución educativa: </strong><em>I.E Nuestra Señora del Carmén</em></p>
-            <p><strong>Sede educativa: </strong><em>Única sede</em></p>
-            <p><strong>Departamento: </strong><em>Boyacá</em></p>
-            <p><strong>Municipio: </strong><em>Susacón</em></p>
-            <p><strong>Número de contrato de obra: </strong><em>CC223456789</em></p>
-            <p><strong>Nombre del contratista de obra: </strong><em>Constructora Colpatria SAS</em></p>
-            <p><strong>Número de contrato de interventoría: </strong><em>CI8769-98076</em></p>
-            <p><strong>Nombre de contratista de interventoría: </strong><em>Constructora Bolivar</em></p>
+        <mat-card-content>
+          <p><strong> Tipo de intervención: </strong> {{ data.informeFinal.proyecto.tipoIntervencionString }} </p>
+          <p><strong> Institución Educativa: </strong> {{ data.informeFinal.proyecto.institucionEducativa.nombre }} </p>
+          <p><strong> Sede: </strong> {{ data.informeFinal.proyecto.sede.nombre }} </p>
+          <p><strong> Departamento: </strong> {{ data.informeFinal.proyecto.departamentoObj.descripcion }} </p>
+          <p><strong> Municipio: </strong> {{ data.informeFinal.proyecto.municipioObj.descripcion }} </p>
+          <p><strong> Número de contrato de obra: </strong> {{ data.numeroContratoObra }} </p>
+          <p><strong> Nombre del contratista de obra: </strong> {{ data.nombreContratistaObra }} </p>
+          <p><strong> Número de contrato de interventoría: </strong> {{ data.numeroContratoInterventoria }} </p>
+          <p><strong> Nombre de contratista de interventoría: </strong> {{ data.nombreContratistaInterventoria }} </p>
         </mat-card-content>
-    </mat-card>
+      </mat-card>
     <div class="mt-2em">
-        <mat-card class="shipping-card var-main-gris">
-            <mat-card-header class="header-card  header-card--margin">
-                <mat-card-title class="header-card--text">
-                    Recibo a satisfacción
-                </mat-card-title>
+        <mat-card class="shipping-card border" align="left">
+            <mat-card-header class="header-card header-card--margin">
+              <mat-card-title class="header-card--text card-title-detalle">
+                Recibo a satisfacción
+              </mat-card-title>
             </mat-card-header>
-            <mat-card-content align="left">
-                <p><strong>URL Acta de recibo a satisfaccion - Obra:
-                    </strong><em>https://drive.google.com/drive/LJ776554/actadereciboasatisfaccion-obra</em></p>
-                <p><strong>Fecha de suscripción: </strong><em>30/06/2020</em></p>
+            <mat-card-content>
+              <p><strong> URL Acta de recibo a satisfaccion - Obra: </strong> {{ data.informeFinal.urlActa }} </p>
+              <p><strong> Fecha de suscripción: </strong> {{ data.informeFinal.fechaSuscripcion | date:'dd/MM/yyyy' }} </p>
             </mat-card-content>
-        </mat-card>
+          </mat-card>
     </div>
     <div class="mt-1em">
         <mat-accordion>
@@ -50,29 +49,8 @@
                         Informe final y anexos
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-                <div class="tabla-expansion-panel mt-2em">
-                    <table mat-table [dataSource]="dataSource" matSort class="tabla mat-elevation-z8 text-center">
-                        <ng-container matColumnDef="numero">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 5%;"> No. </th>
-                            <td mat-cell *matCellDef="let element"> <b>{{element.id}}</b> </td>
-                        </ng-container>
-                        <ng-container matColumnDef="item">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 52%;"> Ítem </th>
-                            <td mat-cell *matCellDef="let element"> {{element.item}} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="tipoAnexo">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de anexo </th>
-                            <td mat-cell *matCellDef="let element"> {{element.tipoAnexo}} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="ubicacion">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Ubicación (url/radicado) </th>
-                            <td mat-cell *matCellDef="let element"> <div [innerHtml]="element.ubicacion"></div>  </td>
-                        </ng-container>
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                    </table>
-                    <mat-paginator [pageSizeOptions]="[ 10, 25, 100]"></mat-paginator>
-                </div>
+
+                <app-tabla-detalle-informe-final [informeFinalId]="data.informeFinal.informeFinalId"></app-tabla-detalle-informe-final>
             </mat-expansion-panel>
         </mat-accordion>
     </div>
