--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
@@ -144,7 +144,8 @@
         <app-expansion-panel
                             [proyecto]=proyecto
                             [contrato]=contrato
-                            [novedad]=novedad>
+                            [novedad]=novedad
+                            (guardar)="ngOnInit()">
         </app-expansion-panel>
   </div>
   <div *ngIf="novedad.observacionDevolucion">
