--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/accordion-novedades/accordion-novedades.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/accordion-novedades/accordion-novedades.component.html
@@ -2,7 +2,8 @@
 <mat-accordion>
     <mat-expansion-panel class="expansion-style sub-expansion" *ngFor="let novedad of novedadeContractual.novedadContractualDescripcion; let i = index" >
         <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title sin-diligenciar">
+            <mat-panel-title class="expansion-style--title 
+            {{ novedad.registroCompleto === undefined ? 'sin-diligenciar' : (novedad.registroCompleto === false ? 'en-proceso' : 'completo' ) }}">
                 Novedad {{ i + 1 }}
             </mat-panel-title>
         </mat-expansion-panel-header>
