--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad/form-registrar-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad/form-registrar-novedad.component.html
@@ -50,7 +50,7 @@
       </div>
       <div class="row animatedDown" *ngIf="
       addressForm.get('instanciaPresentoSolicitud').value !== null &&
-      addressForm.get('instanciaPresentoSolicitud').value !== instanciaSeguimientoTecnico.NoAplica"> 
+      addressForm.get('instanciaPresentoSolicitud').value !== '3'"> 
         <div class="col-md-8">
           <div class="row">
             <div class="pr-1">
