--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-solicitud/ver-detalle-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-solicitud/ver-detalle-solicitud.component.html
@@ -60,48 +60,48 @@
       <p>
         <strong>Fecha de inicio de contrato:</strong>
         <span>
-          
+          {{ (novedad.contrato?.fechaActaInicioFase2 ? novedad.contrato?.fechaActaInicioFase2 : novedad.contrato?.fechaActaInicioFase1) | date:'dd/MM/yyyy'}}  
         </span>
       </p>
       <p>
         <strong>Fecha de finalización de contrato:</strong>
         <span>
-
+          {{ (novedad.contrato?.fechaTerminacionFase2 ? novedad.contrato?.fechaTerminacionFase2 : novedad.contrato?.fechaTerminacion) | date:'dd/MM/yyyy'}}
         </span>
       </p>
 
       <div *ngIf="novedad.esAplicadaAcontrato !== true">
-      <h2 class="card-subTitle">Proyecto asociado</h2>
-      <p>
-        <strong>
-          Llave MEN:
-        </strong>
-        LY886643
-      </p>
-      <p>
-        <strong>
-          Departamento:
-        </strong>
-        Antioquia
-      </p>
-      <p>
-        <strong>
-          Municipio:
-        </strong>
-        Bello
-      </p>
-      <p>
-        <strong>
-          Institución educativa:
-        </strong>
-        I.E. José Cuervo
-      </p>
-      <p>
-        <strong>
-          Sede:
-        </strong>
-        Única sede
-      </p>
+        <h2 class="card-subTitle">Proyecto asociado</h2>
+        <p>
+          <strong>
+            Llave MEN:
+          </strong>
+          {{ novedad.proyectosSeleccionado.llaveMen }}
+        </p>
+        <p>
+          <strong>
+            Departamento:
+          </strong>
+          {{ novedad.proyectosSeleccionado.departamento }}
+        </p>
+        <p>
+          <strong>
+            Municipio:
+          </strong>
+          {{ novedad.proyectosSeleccionado.municipio }}
+        </p>
+        <p>
+          <strong>
+            Institución educativa:
+          </strong>
+          {{ novedad.proyectosSeleccionado.institucionEducativa }}
+        </p>
+        <p>
+          <strong>
+            Sede:
+          </strong>
+          {{ novedad.proyectosSeleccionado.sede }}
+        </p>
     </div>
     </mat-card-content>
   </mat-card>
@@ -171,9 +171,22 @@
               </mat-card-title>
               <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo Adicional Meses: </strong> {{ descripcion.plazoAdicionalMeses }}</p>
               <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo Adicional Días: </strong> {{ descripcion.plazoAdicionalDias }}</p>
+
               <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'"><strong>Fecha de inicio de la suspensión: </strong> {{ descripcion.fechaInicioSuspension | date: 'dd/MM/yyyy' }}</p>
               <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'"><strong>Fecha final de la suspensión: </strong> {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }} </p>
+
               <p *ngIf="descripcion.tipoNovedadCodigo == '3'" ><strong>Presupuesto adicional solicitado: </strong> {{ descripcion.presupuestoAdicionalSolicitado }} </p>
+
+              <section *ngIf="descripcion.tipoNovedadCodigo === '5'">
+                <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index;">
+                  <h3> <strong> CLAUSULA </strong> {{ i + 1 }} </h3>
+                  <p><strong>Cláusula a modificar: </strong> </p>
+                  <section [innerHTML]="clausula.clausulaAmodificar" style="margin-left: 2em"></section>
+                  <p><strong>Ajuste solicitado a la cláusula: </strong> </p>
+                  <section [innerHTML]="clausula.ajusteSolicitadoAclausula" style="margin-left: 2em"></section>
+                </section>
+              </section>
+
               <p><strong>¿Cuenta con la documentación soporte suficiente?: </strong> {{ descripcion.esDocumentacionSoporte === true ? 'Sí' : 'No' }}</p>
               <p><strong>Concepto técnico: </strong></p>
               <section 
