--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/verificar-solicitud-novedad/verificar-solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/verificar-solicitud-novedad/verificar-solicitud-novedad.component.html
@@ -65,48 +65,50 @@
         <strong>
           Fecha de inicio de contrato:
         </strong>
-
+        {{ (novedad.contrato?.fechaActaInicioFase2 ? novedad.contrato?.fechaActaInicioFase2 :
+        novedad.contrato?.fechaActaInicioFase1) | date:'dd/MM/yyyy'}}
       </p>
       <p>
         <strong>
           Fecha de finalización de contrato:
         </strong>
-
+        {{ (novedad.contrato?.fechaTerminacionFase2 ? novedad.contrato?.fechaTerminacionFase2 :
+        novedad.contrato?.fechaTerminacion) | date:'dd/MM/yyyy'}}
       </p>
 
       <section *ngIf="novedad.esAplicadaAcontrato !== true">
-      <h2 class="card-subTitle">Proyecto asociado</h2>
-      <p>
-        <strong>
-          Llave MEN:
-        </strong>
-        LY886643
-      </p>
-      <p>
-        <strong>
-          Departamento:
-        </strong>
-        Antioquia
-      </p>
-      <p>
-        <strong>
-          Municipio:
-        </strong>
-        Bello
-      </p>
-      <p>
-        <strong>
-          Institución educativa:
-        </strong>
-        I.E. José Cuervo
-      </p>
-      <p>
-        <strong>
-          Sede:
-        </strong>
-        Única sede
-      </p>
-    </section>
+        <h2 class="card-subTitle">Proyecto asociado</h2>
+        <p>
+          <strong>
+            Llave MEN:
+          </strong>
+          {{ novedad.proyectosSeleccionado.llaveMen }}
+        </p>
+        <p>
+          <strong>
+            Departamento:
+          </strong>
+          {{ novedad.proyectosSeleccionado.departamento }}
+        </p>
+        <p>
+          <strong>
+            Municipio:
+          </strong>
+          {{ novedad.proyectosSeleccionado.municipio }}
+        </p>
+        <p>
+          <strong>
+            Institución educativa:
+          </strong>
+          {{ novedad.proyectosSeleccionado.institucionEducativa }}
+        </p>
+        <p>
+          <strong>
+            Sede:
+          </strong>
+          {{ novedad.proyectosSeleccionado.sede }}
+        </p>
+      </section>
     </mat-card-content>
   </mat-card>
 
@@ -162,6 +164,8 @@
 
               <p><strong>Resumen de la justificación de la novedad: </strong></p>
               <section [innerHTML]="descripcion.resumenJustificacion" style="margin-left: 2em"></section>
+
+
               <mat-card-title class="header-card--text sub-text" *ngIf="descripcion.tipoNovedadCodigo == '4'">
                 Plazo solicitado
               </mat-card-title>
@@ -169,12 +173,18 @@
                 descripcion.plazoAdicionalMeses }}</p>
               <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo Adicional Días: </strong> {{
                 descripcion.plazoAdicionalDias }}</p>
+
+
               <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'"><strong>Fecha de
                   inicio de la suspensión: </strong> {{ descripcion.fechaInicioSuspension | date: 'dd/MM/yyyy' }}</p>
               <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'"><strong>Fecha
                   final de la suspensión: </strong> {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }} </p>
+
+
               <p *ngIf="descripcion.tipoNovedadCodigo == '3'"><strong>Presupuesto adicional solicitado: </strong> {{
                 descripcion.presupuestoAdicionalSolicitado }} </p>
+
+                  
               <p><strong>¿Cuenta con la documentación soporte suficiente?: </strong> {{
                 descripcion.esDocumentacionSoporte === true ? 'Sí' : 'No' }}</p>
               <p><strong>Concepto técnico: </strong></p>
@@ -204,9 +214,8 @@
             <strong>
               URL con soporte:
             </strong>
-            <a [href]="novedad.urlSoporte"
-              target="_blank" rel="noopener noreferrer">
-              {{ novedad.urlSoporte }} 
+            <a [href]="novedad.urlSoporte" target="_blank" rel="noopener noreferrer">
+              {{ novedad.urlSoporte }}
             </a>
           </p>
         </mat-card-content>
@@ -236,93 +245,89 @@
           </strong>
           Sí
         </p>
-        <section 
-                        [innerHTML]="novedad.observacionDevolucion.observaciones"
-                        style="margin-left: 2em"
-                        
-                ></section>
+        <section [innerHTML]="novedad.observacionDevolucion.observaciones" style="margin-left: 2em"></section>
       </mat-card-content>
     </mat-card>
   </div>
 
-      <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
-        <div class="row justify-content-center mt-2em">
-          <div class="pr-1">
-            <label class="label-left" for="tieneObservaciones" [class.color-secondaryColor]="
+  <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+    <div class="row justify-content-center mt-2em">
+      <div class="pr-1">
+        <label class="label-left" for="tieneObservaciones" [class.color-secondaryColor]="
             addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched ||
             addressForm.get('tieneObservaciones').invalid && estaEditando">
-              ¿Tiene observaciones a la solicitud de novedad?
-            </label>
-          </div>
-          <div>
-            <mat-radio-group class="radioInput" formControlName="tieneObservaciones">
-              <mat-radio-button [value]="true">Sí</mat-radio-button>
-              <mat-radio-button [value]="false">No</mat-radio-button>
-            </mat-radio-group>
-            <span class="required-form-group m-0">*</span>
-          </div>
-        </div>
+          ¿Tiene observaciones a la solicitud de novedad?
+        </label>
+      </div>
+      <div>
+        <mat-radio-group class="radioInput" formControlName="tieneObservaciones">
+          <mat-radio-button [value]="true">Sí</mat-radio-button>
+          <mat-radio-button [value]="false">No</mat-radio-button>
+        </mat-radio-group>
+        <span class="required-form-group m-0">*</span>
+      </div>
+    </div>
 
-        <div class="d-flex mt-2em align-items-center animatedDown"
-          *ngIf="addressForm.get('tieneObservaciones').value === true">
-          <div class="text-area-quill" [class.color-secondaryColor]="
+    <div class="d-flex mt-2em align-items-center animatedDown"
+      *ngIf="addressForm.get('tieneObservaciones').value === true">
+      <div class="text-area-quill" [class.color-secondaryColor]="
       addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched ||
       addressForm.get('observaciones').invalid && estaEditando">
-            <label class="text-area-quill--label align-left-label" [class.colorMainColor]="
+        <label class="text-area-quill--label align-left-label" [class.colorMainColor]="
                   !(addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched ||
                   addressForm.get('observaciones').invalid && estaEditando)">
-              Observaciones a la solicitud de novedad
-            </label>
-            <quill-editor class="quill-editor-style ml-1em" [styles]="editorStyle" [modules]="config"
-              (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" required>
-            </quill-editor>
-          </div>
-          <span class="contador miles" *ngIf="addressForm.get('observaciones').value">
-            {{1000 -
-            (textoLimpio(addressForm.get('observaciones').value)>1000?1000:textoLimpio(addressForm.get('observaciones').value))}}
-          </span>
-          <span class="contador miles" *ngIf="!addressForm.get('observaciones').value">
-            1000
-          </span>
-        </div>
-        <div class="text-center mb-2em">
-          <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="
+          Observaciones a la solicitud de novedad
+        </label>
+        <quill-editor class="quill-editor-style ml-1em" [styles]="editorStyle" [modules]="config"
+          (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" required>
+        </quill-editor>
+      </div>
+      <span class="contador miles" *ngIf="addressForm.get('observaciones').value">
+        {{1000 -
+        (textoLimpio(addressForm.get('observaciones').value)>1000?1000:textoLimpio(addressForm.get('observaciones').value))}}
+      </span>
+      <span class="contador miles" *ngIf="!addressForm.get('observaciones').value">
+        1000
+      </span>
+    </div>
+    <div class="text-center mb-2em">
+      <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="
         addressForm.get('tieneObservaciones').invalid ||
         addressForm.get('tieneObservaciones').value === true && addressForm.get('observaciones').invalid">
-            <img src="assets/img/icon/guardar.svg" alt="Regresar">
-          </button>
-        </div>
-      </form>
+        <img src="assets/img/icon/guardar.svg" alt="Regresar">
+      </button>
+    </div>
+  </form>
 
-      <div *ngIf="false" class="mb-2em">
-        <table class="mat-table cdk-table mat-sort mat-table-style table-form table-form--2 table-gris">
-          <thead>
-            <tr class="mat-header-row cdk-header-row ng-star-inserted">
-              <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-                Fecha de revisión
-              </th>
-              <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-                Responsable de la observación
-              </th>
-              <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-                Historial de observaciones
-              </th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let observacion of listaObservaciones">
-              <td class="mat-cell cdk-cell ng-star-inserted">
-                {{ observacion.fecha }}
-              </td>
-              <td class="mat-cell cdk-cell ng-star-inserted">
-                {{ observacion.responsable }}
-              </td>
-              <td class="mat-cell cdk-cell ng-star-inserted">
-                {{ observacion.historial }}
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+  <div *ngIf="false" class="mb-2em">
+    <table class="mat-table cdk-table mat-sort mat-table-style table-form table-form--2 table-gris">
+      <thead>
+        <tr class="mat-header-row cdk-header-row ng-star-inserted">
+          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
+            Fecha de revisión
+          </th>
+          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
+            Responsable de la observación
+          </th>
+          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
+            Historial de observaciones
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let observacion of listaObservaciones">
+          <td class="mat-cell cdk-cell ng-star-inserted">
+            {{ observacion.fecha }}
+          </td>
+          <td class="mat-cell cdk-cell ng-star-inserted">
+            {{ observacion.responsable }}
+          </td>
+          <td class="mat-cell cdk-cell ng-star-inserted">
+            {{ observacion.historial }}
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
 </section>
