--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
@@ -58,9 +58,9 @@
       </th>
       <td mat-cell *matCellDef="let element">
         <span class="info-text d-block m-0" 
-          [class.sin-diligenciar]="element.registroCompleto !== true"
-          [class.completo]="element.registroCompleto === true"></span>
-        {{element.registroCompleto === true ? 'Completo' : 'Incompleto'}}
+          [class.sin-diligenciar]="element.registroCompletoValidacion !== true"
+          [class.completo]="element.registroCompletoValidacion === true"></span>
+        {{element.registroCompletoValidacion === true ? 'Completo' : 'Incompleto'}}
       </td>
     </ng-container>
 
@@ -76,7 +76,7 @@
         </a>
 
         <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-        (click)="this.rechazarSolicitud( element.novedadContractualId)"
+        (click)="this.rechazarSolicitud( element.novedadContractualId, element.numeroSolicitud, element.novedadesSeleccionadas)"
           *ngIf=" element.estadoCodigo === '5' && 
                   element.registroCompletoValidacion === true && 
                   element.tieneObservacionesSupervisor === true">
