--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
@@ -40,9 +40,9 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado del registro</th>
       <td mat-cell *matCellDef="let element">
         <span class="info-text d-block m-0" 
-          [class.sin-diligenciar]="element.registroCompleto !== true"
-          [class.completo]="element.registroCompleto === true"></span>
-        {{element.registroCompleto === true ? 'Completo' : 'Incompleto'}}
+          [class.sin-diligenciar]="element.registroCompletoValidacion !== true"
+          [class.completo]="element.registroCompletoValidacion === true"></span>
+        {{element.registroCompletoValidacion === true ? 'Completo' : 'Incompleto'}}
       </td>
     </ng-container>
 
